# SlotMachine

./: .gitignore  CMakeLists.txt  README.md
doc/: Dokumentacja.md
settings/: instruction.txt
src/: columns.cpp  columns.hpp  game.cpp  game.hpp  main.cpp  menu.cpp  menu.hpp  player.cpp  player.hpp  roll.cpp  roll.hpp  slot.cpp  slot.hpp
