cmake_minimum_required (VERSION 3.8)
project ("SlotMachine")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR})
if (WIN32)
    set(CMAKE_PREFIX_PATH "C:\\Qt\\5.15.2\\msvc2019_64")
endif ()

find_package(Qt5Widgets)

file(GLOB SOURCES src/*.cpp src/*.hpp src/*.h)
if(Qt5Widgets_FOUND)
    set(CMAKE_AUTOMOC ON)
    set(CMAKE_AUTOUIC ON)
    set(CMAKE_AUTORCC ON)
    add_executable (SlotMachine  ${SOURCES})
    target_link_libraries(SlotMachine Qt5::Widgets)
else()
    add_executable (SlotMachine ${SOURCES})
endif()
